--- a/app/views/layout.twig
+++ b/app/views/layout.twig
@@ -9,7 +9,7 @@
     <nav class="navbar-inverse nav-static-top">
         <div class="container">
             <div class="navbar-header">
-                <a href="" class="navbar-brand">Slim3</a>
+                <a href="{{ path_for('root') }}" class="navbar-brand">Slim3</a>
             </div>
         
             <div class="nav navbar-nav">
